# GlobalKit

./: .editorconfig  .gitignore  README.md  license.txt  pyproject.toml
GlobalKit/: __init__.py  alphabet.py  functions.py  main.py
tests/: test_functions.py
