[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "GlobalKit"
version = "1.8"
description = "Get alphabets from different languages and a set of functions for text manipulation"
requires-python = ">=3.11"
authors = [{ name = "CrazyFlyKite", email = "karpenkoartem2846@gmail.com" }]
readme = "README.md"
license = { file = "license.txt"}
classifiers = [
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
]

[options]
packages = ["GlobalKit"]
include_package_data = true

[project.urls]
GitHub = "https://github.com/CrazyFlyKite/GlobalKit"
PyPI = "https://pypi.org/project/GlobalKit"
